--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Lasagne</h1>
+  <img src="lasagne.jpg" alt="Image of a lasagne">
   <a href="../index.html">Home</a>
 </body>
 </html>
