Added curry page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/lasagne.html">Recipe Title</a>
+  <ul>
+    <li><a href="recipes/lasagne.html">A Lovely Lasagne</a></li>
+    <li><a href="recipes/curry.html">A Crazy Curry</a></li>
+  </ul>
 </body>
 </html>
