--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -5,8 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
+  
   <h1>Lasagne</h1>
-  <img src="lasagne.jpg" alt="Image of a lasagne">
-  <a href="../index.html">Home</a>
+  <a href="../index.html">Home</a><br>
+
+  <img src="lasagne.jpg" height="350" width="600" alt="Image of a lasagne">
+
+  <h2>Description</h2>
+  <p>Here lies a delcious lasagne ready to devour, looks so tasty!</p>
+
+  <h3>Ingredients</h3>
+  <ul>
+    <li>Olive Oil</li>
+    <li>Ground Beef</li>
+    <li>Italian Sausage</li>
+    <li>Tomato Sauce</li>
+    <li>Cheeses</li>
+    <li>Lasagne Sheets</li>
+  </ul>
+
+  <h3>Steps</h3>
+  <ol>
+    <li>Cook mince and sausage, breaking up chunks and season</li>
+    <li>Add the sauce and simmer</li>
+    <li>Stack the lasagne in a tray</li>
+    <li>Bang it in the oven</li>
+    <li>Eat, yum!</li>
+  </ol>
+
 </body>
 </html>
